bat.bool1.posneg.PosNeg.scala.error
Erreur de compilation :
PosNeg:13: error: ')' expected but integer literal found.
    if(a>0  b>0){return false
              ^PosNeg:18: error: illegal start of simple expression
  }else {
  ^